# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: brain_even.py  brain_prime.py  brain_progression.py  cli.py  engine.py  pyproject.toml
brain_games/games/: brain_gcd.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/script/: cli.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet-code/: brain_games.py  pyproject.toml
scripts/: brain_calc.py  pyproject.toml
