
[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ilitili <momcoveylebozo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.script]
brain-games = "brain_games.script.brain_games:main"
brain-even = "brain_games.script.brain_even:main"
brain-calc = "brain_games.script.brain_calc:main"
brain-gcd = "brain_games.script.brain_gcd:main"
brain-progression = "brain_games.script.brain_progression:main"
brain-prime = "brain_games.script.brain_prime:main"